--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WnjiZWZTf2sxHUmjCinJw/ynO23w+yBxYicuFutifCB2XV+GAradecYukr3lHzRthuKc2RWMAsMdvaBWxUyr1YqQs1N7IlmfkVx0enT58zGbq46mnt8io6t2hMxKC6h3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K7XCHVYLoH3uUG+2PbNzzV0Xj4O7exmW1appiloEmIxqGFp30zuYt22afS20C9jhLtAt4+n+hSzlffv3MNpD3D3r2uyOzfq1s8rcrotLOivt1V8kYQx2qYqOcCy0EHtm">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
