--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -177,7 +177,7 @@
                         
                 </div>
             </div>
-            <div class="mbr-figure" style="width: 64%;">
+            <div class="mbr-figure" style="width: 120%;">
                     <img src="assets/images/mbr-1042x695.jpg" alt="Mobirise" title="">
             </div>
         </div>
@@ -677,7 +677,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ry/C8YDYi3t/t2vX+ej/9MVwSYiZgQ6Ry4PGV2A14siubfGZF/2vnk+Vf26RkTdxcsQuukNIG5VvhYOu9a2ZTOM/gCWyZbvo0vjC9wVQuZ1jt9FHoGFlwfTMQL2f76SN">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G6MaQv7o3yYW9Fu1v4H1SGbySjV5NBL0YROfWTkvdqzAHl0oKFtppVGDdm/4Jgo9/zCHo2EGLGxpcSnwFsZ5eUVSKGutUgo1p7fgPPJ/uxPH60nhvXi0+VlAq9ssqdGs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -754,7 +754,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uQznEkZs67QnjFxS+5hlgoeHEoIFpB+AGXsmVFWcgyzQqvUR7rlHrqmEtUHSPu7N+4HNH+YrXAqV4zBXe5imQ/o6E/WLShPw3Gs8QjCaLRYxduTtK6/14w7w+nGdPQbP">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DFf1+IjY4GEpuGLMH8vjSzRY0C5halCco8XAGZNfil7MzzlOu+U9l3zcgg2LK2wcMt2+cwixk/3W82tSHyh1zxuwv9yMJLKfzaPqQWXBMIy152VsOZtZz0hNBA9KjHA6">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
