create github pages

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -104,7 +104,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="W27lX78OAhIuQEbUKGJeSq6jiS/5UYYC0j9xKk21unnaDpR7AUjWg6WD2y5nvZLtEQ/0AIqMrl54Tu+TM+8UIpOigmMEDA+1AA6EMX5VK625bht1p6ZNaJUbik/04lkQ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nEy2zVyIAtbowRbcqLrw4tBLaGV7Ol1JocrPolcusIavULXz85EGu1NEyH4l0u0TxcuVdPT8Jg8nbdu9mkyw4tuRoDMKqUJUPUr8Qe0Ig44+bz0epf/ZBvezpGF3wSPB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -206,7 +206,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZmzUqaWQeoaHw3Iwkebe1MK3h2V7P0PdJ1MpRuNMbghjSpeZi81OdKA747gXUBnKowbWnISx9P8asA0pdYhY1Gm6ABwyFp2wPsMIQuhC4Uk/73KtJqlNmmS4ePCb00Fq">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GRly3Psk0GSBik3vHbPhYUWOsTdddG/t1XTzsBr2BWpoqGU2AGbc4FMGF21jbQpAWrH9tcoUYmgrMlnB7js/9IsUNHiHfThxiiDKh8CCr/qbdrgA+POPmaO7DKMoB5QK">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
