create github pages

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                          <img src="assets/images/logo-2-314x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-5" href="https://mobirise.co">
                         فكرة تيك</a></span>
             </div>
         </div>
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -104,7 +104,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="on4OMoHUg/ddEtC+tBlWB1JyQ63Xu/YQ4aCmJeuINP3c22ZAZx+V1YOWtI8Xx9LAJawU4/Dtn8QuuitiejXSwo4GwU7qeimL8mzXGqzv81yT1RNi3BaTKTsl/IBmjgD1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e9KynKy0ehwtRMrOXTVPLRUrp9vjVoiudcjrPdV6OvBH8mOalADTHRgpVYZOa8v77ZUhICxNHQYL2Vx0KP/sLemzGe226FgryXs140KsUyT5Plqz4LurBUeIGII3TlC5">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -206,7 +206,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hedyWIaw3cgy3fYlWPBl4rTA/WrCzwx5gwOZmxCA1+s67lmjBCxNbho84SkiGrvPqo+QB/2IJCtUIw67pDHlKBpTajasYBt1fy6QD3x6QA9WBLVtt+Vba3s36fVYfi2F">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="he66IwqFKwGRGnIOVwgFWm0RvvlmWZ22slgijp8JK2nKUcGv/aZaK/4NWQvdp53QNjdMKErbJ9t3OZZ8si+7X6u7hGeQ3wRLuKRoYcgcnbD5v+AmmxHB2KiIIZTx4LRD">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
