--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                          <img src="assets/images/logo-2-314x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-5" href="https://mobirise.co">
                         فكرة تيك</a></span>
             </div>
         </div>
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header4 cid-rqDnp1LDDF" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="header4 cid-rqDnp1LDDF" id="header4-5">
 
     
 
@@ -103,7 +103,7 @@
                     <p class="mbr-text mbr-fonts-style display-7">&nbsp;نقوم بدراسة الفكرة وتخطيطها وتحليلها وتنفيذها وتسويقها بإستخدام أهم الأدوات الحديثة<br>ونقوم إيضا في إدارة المشاريع البرمجية وتسليمها للعميل</p>
                 </div>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://atesaudi.blogspot.com/p/blog-page_4.html" target="_blank">طلب تحليل الفكرة</a>
-                    <a class="btn btn-md btn-danger display-4" href="https://atesaudi.blogspot.com/p/blog-page_30.html" target="_blank">طلب عرض سعر&nbsp;<br></a></div>
+                    <a class="btn btn-md btn-danger display-4" href="http://atesaudi.blogspot.com" target="_blank">مدونة فكرة تيك</a></div>
             </div>
             <div class="mbr-figure pt-5">
                 <img src="assets/images/mbr-798x485.jpg" alt="Mobirise" title="" style="width: 35%;">
@@ -676,7 +676,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uU8JZMTi62utx3AAEHiOi9V+gdWpMLnJarhO2F2L5PAxr973ygessbELsV82tzI2DEqO6Zpkq7QepROeNqU4RHtNJOlFS+HMqILvmbGBY8Cnn52ppfmz4xxY/nt144FK">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oemGsnyC30ETIuslFsaOKyG7WbgHXMEnONTnR7DCLjHFfcMXXRKpIaXqEW9qr9jq6PKxSxBRH4eQhK81lM5ttS2kYtv0kaUgdTP6/E3GwLzaQ/3FcaRzbn0Kgz+59vxg">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -753,7 +753,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="obOLUUVjs1C5seIhNv0/cGKCor4/mkwJd6q+8XRpz7YvdIZi+/HI29obFiR/F+Qp/cQJap1TZFCICciUiWxlwfYzRbeCqyX6dSdQ0xGKJMDOB3bWPH2INa5FhcTaoGsb">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KOqn74UJw9kjE1bWkoyX8En8DQMtycNo/nEjewOQnjPXd+8n4BbRiwEcKTGf4OQ3TsyY3bUvpcgtYrt8qtCOJX1KdXtM9VsABz1d/tJjw8Cx0EE74si758U31JW97l17">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
