--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                          <img src="assets/images/logo-2-314x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-5" href="https://mobirise.co">
                         فكرة تيك</a></span>
             </div>
         </div>
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -171,7 +171,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2V102y6pXyxlM43IfYXRIMICVtI+Cd1ZdjL0qHXzHd0yiSgYkMx4QG0hLFXyJ8z+pgCuROtRgiAEU6MA0JFNFGXQ/o5IIKarOv2tnkk6pmeGb+yYR3ATyz4pIQVKVdNz">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RyZ5jjczkjsZKg+AsJjIacY4R1xLymExhE44yEEGhO9p3dVN+fhD8rerL+1aTLIfmGO8NDSBgjzXNzqFatLP/uH14YPsSLmsrNq/SRwwWNr/TOX0kNIanI1dCFdzxsOz">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
