--- a/advice.html
+++ b/advice.html
@@ -60,7 +60,7 @@
                          <img src="assets/images/logo-2-314x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-5" href="https://mobirise.co">
                         فكرة تيك</a></span>
             </div>
         </div>
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="services3 cid-rrDBTrALW9" id="services3-1l">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="services3 cid-rrDBTrALW9" id="services3-1l">
     <!---->
     
     <!---->
@@ -272,7 +272,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SfsJFpKHlFqW1INFicCXA4niy7ipEKKNzrWkwXZ1BjWOq9EuevVXfaT++pgDkCl3GqnlXRdybAuOO+QLQPWqa2DbnwiToARnuSJoocxYph+TiRQWvBiG0dQgAYF96srC">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sOleMaM/LkwXs/KNFxSQf00whXoNgtLaz2fvnJBivajpKfe9GJqllm+nwsGoo++Q3f+VZEnnDSYsDeFcIzEX94/ESsnpv1Aj566HGZkTAToMJiHJvkWnCKHAk3DVFtE5">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
