--- a/payement.html
+++ b/payement.html
@@ -60,7 +60,7 @@
                          <img src="assets/images/logo-2-314x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-5" href="https://mobirise.co">
                         فكرة تيك</a></span>
             </div>
         </div>
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rra6HgoXVT" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section once="footers" class="cid-rra6HgoXVT" id="footer7-1k">
 
     
 
