--- a/advice.html
+++ b/advice.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="services3 cid-rrDBTrALW9" id="services3-1l">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="services3 cid-rrDBTrALW9" id="services3-1l">
     <!---->
     
     <!---->
@@ -272,7 +272,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sOleMaM/LkwXs/KNFxSQf00whXoNgtLaz2fvnJBivajpKfe9GJqllm+nwsGoo++Q3f+VZEnnDSYsDeFcIzEX94/ESsnpv1Aj566HGZkTAToMJiHJvkWnCKHAk3DVFtE5">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pNjCic+JaU/DDXADcCL00JDlKinnkEWIDGW3D6s2J2IVVh4URFTdnMbItHhXS/xGWvsfemm01bh0r0p3xHZS4QuclFhyzVVo/P2QzkBYhPwykjTsVfwy8vsgm+N08wOR">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
