create github pages

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -104,7 +104,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EC75MgqN9jSyUVcpRcCG70EZjt4K22nZcHZ9/ILEm1XsZ/r404SAnXVIyruOtadRcY2NCRwXtrIF+K9hOVcJceTIZIaZ9SJIdb2tT72vMJ79xSx9tGzDB4VgDLBc/z7v">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZdZA4QgjhAf5gT512RXLNEOJL/8mGWphlRwdmI12/wrpyg0botxfVJwhXQxCvNZcBj/xNsL49EpSMF+lOIacQKbt72d8nk4OJ9oE2YvF6DMADHmnIbj0fdAElOLaBhV6">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -206,7 +206,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZbtTKE2+rE9+jUw+PPsVlPUK6MgvqVWiZoUsTKF6CEQPPO3y6QhDFCOgD4xzCW9TxwFxd7QEiERNZhj/ZKVdAooEWSywHQaN6sTGKBRc0w3AnBNBpdkKT/WfUVZkwcEQ">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fqj6jsnbtbYSTQwHqG1Vo78Uetw8H0krGRq2FmBvuTdd79kiaGcz3rU14I5+UR2Thx28aXPZo1SdIjEnTYwCWU23VuVP9A9c/tpsR4ggTNoA01mea/E70H5HElR0E4j3">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
