create github pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header4 cid-rqDnp1LDDF" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header4 cid-rqDnp1LDDF" id="header4-5">
 
     
 
@@ -676,7 +676,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Z0hc9Yui40fSpk+lhw0tL9ONjLiuovrgHzravWxGgknzxO7sivCn/9n8ANrFAhpwq1VvYiynwCjH8h9jYYF29B9VTzArTimSMMIj2cc7WA/Zfzj4XrNWcRI2WItRWCb0">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OLmUJ2mYw+Aq8ayyZbJQMNCwx3i4p7tXimg0RKwLPjO9Fuldk1o8js/Y62r/mQl10wjAv0PApFbEJeqtrCkSS7roT3qvPH+AkIH8Ya9Ej1ZKJOqAmhWA2pOKy1j0tOq1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -753,7 +753,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IATIwJSb2hyp3W0FNe5fpgc5eQ5u1TVEGXLHW6lx0ZG6YG/d5FPZomQcn8qalmqgNQxoNVHNnMPxxKoKloC1K0bdn/3tjS37N9dJAgKVHVQwmJ5KmgjEqFaMfu0J7j7n">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xVwBXVxuIvM0WXKIHE6wIiAiM494WRUu8+UREd1YUk1Kr+mlYVi9fY2gmLdTxKHWDFXplt9TQtPHBhaUx0xIuifHnu796kRI1Hj1hMWHbVAXYC43mBowrGGo2swBYns9">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
