--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -104,7 +104,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dS9Y3T4KPL8X23TiXxq6gfJUKCYZ6BzeRz9tRCgVLMi5p9WSp6x3Gf+Oqvz0SB3jhuZgFrg4hELeSFm6+XWh3WHvVhh2dYX56KkRmLFPZYf4AFGaiQ8J1xea6Ueuykdh">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZE3fjwssKnoRgBB10neQpxy0PNJTOuKzOqsJ74mCmouxBIns9QtipfnCdmt0wobBKKu5OTPv5r88yOxzqxEssNfKHVXP653+0Gz1UjPh38iO5oRw2kAA+jt2INyN7ODh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -206,7 +206,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K0Q4wehXkU1vBPXKy0N7cc9ihPUUQNsEf6kxvZ0dN2PbhYOYN/XNYAbdVVOVh9m0kqKTyMUJhngp/yzOUZlEQY1fDskUId+MAT3XG69pi6n1rJk5OFkMt8NiKbqlXVAW">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dfhOUx034+st6kY7fDkuVR8ufO+ZPlR8NCHY8D/qjbh2WP4pH1GstXr4Krr3j2ykuyygpqjwx7z8QaUdlM80pXaq/f4XT7r3o7l1liYUT2yr/PY8oo6/5uFS+t7vMmW7">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
